--- a/footer.html
+++ b/footer.html
@@ -1,5 +1,5 @@
 <div id="zoneBtn">
-	<button class="info" ng-click="accueilVisible.afficher(true);" style="background:#ADD8E6;"><img src="css/exit.png"/><span>Retour</span></button>
+	<button class="info" ng-click="afficherAccueil(true);" style="background:#ADD8E6;"><img src="css/exit.png"/><span>Retour</span></button>
 	<button class="info" ng-click="serializePlanning();" style="background:#ADD8E6;"><img src="css/export.png"/><span>Export</span></button>
 	<button class="info" ng-click="afficherModifierCategorie();" style="background:#ADD8E6;"><img src="css/panel.png"/><span>Catégories</span></button>
 	<button class="info" ng-click="fenetreModifHoraire.afficher(true);" style="background:#ADD8E6;"><img src="css/modifHeure.png"/><span>Horaires</span></button>
