--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 		</div>
 		<div ng-include="'accueil.html'"></div>
 		<div ng-if="!accueilVisible.isAfficher()" id="grillePlanning" ng-include="'grillePlanning.html'"></div>
-		<div class="placer_form" ng-include="'form_ajout_modif_evenement.html'"></div>
-		<div class="placer_form" ng-include="'form_ajout_colonne.html'"> </div>
-		<div class="placer_form" ng-include="'form_modif_suppr_colonne.html'"> </div>
+		<div class="placer_form" ng-include="'fenetreEditEvnt.html'"></div>
+		<div class="placer_form" ng-include="'fenetreAjoutColonne.html'"> </div>
+		<div class="placer_form" ng-include="'fenetreModifSupprColonne.html'"> </div>
 		<div class="placer_form" ng-include="'form_modif_horaire.html'"> </div>
 		<div class="placer_form" ng-include="'fenCategorie.html'"> </div>
 		<div class="placer_form" ng-include="'form_ajout_categorie.html'"> </div>
