reorganisation css pas finis

--- a/html/fenCategorie.html
+++ b/html/fenCategorie.html
@@ -1,4 +1,4 @@
-﻿<div class="containerForm" ng-if="fenCategorie.isAfficher()">
+﻿<div class="containerForm" >
 	<form class="centrer_form"  ng-submit="">
 		Gestion des catégories<br />
 		<div class="containerCategorie" >
