--- a/html/fenPolice.html
+++ b/html/fenPolice.html
@@ -1,4 +1,4 @@
-<div class="containerForm" ng-if="changerPoliceEcriture.isAfficher();">
+<div class="containerForm" ">
 	<form class="centrer_form" >
 		<table>
 			<tr>
