--- a/html/fenetreModifSupprColonne.html
+++ b/html/fenetreModifSupprColonne.html
@@ -1,4 +1,4 @@
-<div class="containerForm" ng-if="fenetreModifSupprColonne.isAfficher()">
+<div class="containerForm" >
 	<form class="centrer_form" ng-submit="modifColonne()">
 		<label for="titreCol">Titre :</label>
 		<input id="titreCol" type="text" ng-model="formCol.titre" show-focus="fenetreModifSupprColonne.isAfficher()" required />
