--- a/html/fenImport.html
+++ b/html/fenImport.html
@@ -1,4 +1,4 @@
-<div ng-if="fenImport.isAfficher()"  style="width:100%; height:100%;z-index:11;position:absolute">
+<div  style="width:100%; height:100%;z-index:11;position:absolute">
 	<div style="position:fixed;width:100%; height:100%;">
 	<button style="position:absolute;z-index:11;height:100%;width:100%;opacity:0" ng-click="fenImport.afficher(false)" >fermer </button>
 	<div style="position:absolute;z-index:12"  class="centre" >
