--- a/html/fenetreAjoutCategorie.html
+++ b/html/fenetreAjoutCategorie.html
@@ -1,4 +1,4 @@
-<div class="containerForm" ng-if="fenetreAjoutCategorie.isAfficher()">
+<div class="containerForm" >
 	<form class="gererColonne centrer_form" >
 		<label for="titreCategorie">Titre :</label>
 		<input id="titreCategorie" type="text" ng-model="titreCat.val" show-focus="fenetreAjoutColonne.isAfficher()" />
