--- a/html/fenetreEditEvnt.html
+++ b/html/fenetreEditEvnt.html
@@ -1,5 +1,4 @@
-﻿<div class="containerForm" ng-if="fenetreEditEvnt.isAfficher()">
-	<form id="editEvnt" class="form_evenement centrer_form" ng-submit="validationFormulaireEvenement()">
+﻿<form id="editEvnt" class="form_evenement centrer_form centre" ng-submit="validationFormulaireEvenement()">
 				<table>
 					<tr>
 						<td style="width:100px">Titre:</td>
