--- a/html/grillePlanning.html
+++ b/html/grillePlanning.html
@@ -1,4 +1,4 @@
-<div class="fenetrePrincipal">
+<div class="fenetrePrincipal max">
 	<div style="" id="footer"  ng-include="'html/footer.html'"></div>
 
 	<div id="tableau"  >
