--- a/html/fenExport.html
+++ b/html/fenExport.html
@@ -1,4 +1,5 @@
-<div class="max" ng-include="'html/fermerFen.html'"/>
-<textarea class="centre export">
-{{export}}
-</textarea>
+<div class="centre" style="position:absolute;width:100%; height:100%;z-index:10;"><button style="height:100%;width:100%;opacity:0" ng-click="fenExport.afficher(false)" >fermer </button>
+
+<textarea class="centre export" >
+{{export}}</textarea>
+</div>
