--- a/html/fenetreModifHoraire.html
+++ b/html/fenetreModifHoraire.html
@@ -1,8 +1,10 @@
-<div class="max" ng-include="'html/fermerFen.html'"/>
-<form class="gererColonne" ng-submit="modifHeure()">
-	<label for="heureDeb">Heure début :</label>
-	<input id="heureDeb" type="number" ng-model="horaire.heureDeb" min="0" max="23" />
-	<label for="heureFin">Heure fin :</label>
-	<input id="heureFin" type="number" ng-model="horaire.heureFin" min="1" max="24" />
-	<input type="submit" value="Modifier heure" />
-</form>
+<div class="containerForm" ng-if="fenetreModifHoraire.isAfficher()">
+	<form class="gererColonne centrer_form" ng-submit="modifHeure()">
+		<label for="heureDeb">Heure début :</label>
+		<input id="heureDeb" type="number" ng-model="horaire.heureDeb" min="0" max="23" />
+		<label for="heureFin">Heure fin :</label>
+		<input id="heureFin" type="number" ng-model="horaire.heureFin" min="1" max="24" />
+		<input type="submit" value="Modifier heure" />
+		<input type="button" value="Annuler" ng-click="fenetreModifHoraire.afficher(false)" />
+	</form>
+</div>
