css ok reorganisation controleur pour test et homogenisation des fenetres
on peut maintenant testé le controleur deplus un script loader est
ajouté pour n'avoir à rajouté qu'une foix les script à charger tampis si
ça charge des script non utilisé
on peu aussi annuler une suppression
optimisation personnalisation du style

--- a/html/accueilVisible.html
+++ b/html/accueilVisible.html
@@ -1,4 +1,4 @@
-	<div ng-class="accueilVisible.getClasse()" id="accueil">
+	<div id="accueil">
 		<h1>LE PLANIFICAT'HEURE</h1>
 		<p id="slogan">Planifier votre journée à toutes heures!</p>
 		<div id="mode">
