--- a/html/fenetreEditEvnt.html
+++ b/html/fenetreEditEvnt.html
@@ -37,6 +37,6 @@
 					<input type="submit" value="Ajouter"  ng-if="mode == 'ajout'" />
 					<input type="submit" value="Modifier" ng-if="mode != 'ajout'" />
 					fermer après validation <input  ng-model="form.fermer" type="checkbox"/>
-					<input type="button" value="Supprimer" ng-click="suppEvmt();" ng-if="mode!='ajout'" />
+					<input type="submit" value="Supprimer" ng-click="suppEvmt();" ng-if="mode!='ajout'" />
 				</div>
 		</form>
