--- a/html/grillePlanning.html
+++ b/html/grillePlanning.html
@@ -1,15 +1,16 @@
 <div class="fenetrePrincipal max">
+	<p style="margin-left:-5000px;height:0px">ie 11 bug toujours aussi étrange ceci empeche le margin top de tableau de mettre un scroll sur la page d'accueil wtfffff</p>
 	<div style="" id="footer"  ng-include="'html/footer.html'"></div>
 
 	<div id="tableau"  >
 		<div class="A4"  ng-repeat="page in planning.getPages()" >
 			<div   ng-style="{'width':planning.getColonneHoraire().getLargeurPrcnt(),'height':'100%'}"  resizableDroite="colonneRedim(planning.getColonneHoraire())" class="col pasMoi">
 					<div class="coins cell" resizableBas="setLigne1Hauteur()"  ng-style="{'height':planning.getHauteurLigne1()}" >Planning</div>
-					<div class="cellHoraire cell"  ng-style="{'height':getHauteurCell()}"  ng-repeat="lig in ligne track by $index">{{lig + "h00 - "+(lig+1) +"h00"}}</div>
+					<div class="cellHoraire cell"  ng-style="{'height':getHautCell()}"  ng-repeat="lig in ligne track by $index">{{lig + "h00 - "+(lig+1) +"h00"}}</div>
 			</div><!--
 			--><div style="width:100%;height:100%" ng-style="{'width':sal.getLargeurPrcnt()}" resizabledroite="colonneRedim(sal)" class="bigCol" ng-repeat="sal in page.getColonnes() track by $index"> 
 		  <div class=" bordPlanningDroite cell"  resizableBas="setLigne1Hauteur()"  ng-style="{'height':planning.getHauteurLigne1() }"  ng-click="afficherModifColonne(sal)"> {{sal.getTitre()}}</div>
-			<div id="cellEvenement"   ng-style="cellStyle"  class="cell"  deposer="deposer(sal,lig)" ng-repeat="lig in ligne" ng-click="afficherAjouterEvenement(sal,lig)"><br/></div>
+			<div id="cellEvenement"    ng-style="{'height':getHautCell()}" class="cell"  deposer="deposer(sal,lig)" ng-repeat="lig in ligne" ng-click="afficherAjouterEvenement(sal,lig)"><br/></div>
 			<div  style="height:100%" class="tache">
 			  <div resizablebas="tacheRedim(tache)" class="laTache" draggable="true"  glisser="glisser(tache,sal)" ng-click="afficherModifierEvenement(tache,sal)" ng-show="tache.getVisibility()" ng-repeat="tache in sal.getTaches()"  ng-style="{'height':tache.hauteur(true),'top':tache.margeHaut(true) ,'background':tache.getCategorie().getCouleur(),
 			  'width': tache.largeur()}">
@@ -33,7 +34,5 @@
 		
 		</div>
 		</div>
-
-	</div>
 
 </div>
